--- a/index.html
+++ b/index.html
@@ -214,7 +214,26 @@
 				</div>		
 		</div>							
 		</div>
-
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Keynotes details</h2>
+						<div class="text-black text-left">
+							<ul>
+								<li><p><b>"Free-space gesture interaction through communication and sensing conversion":</b>Recent advances in RF-sensing have demonstrated that communication systems (e.g. WiFi, cellular, LoRa, Blue-tooth, etc.) may not only provide connectivity, but also sensing and environmental perception capabilities. Therefore, RF convergence - realizing sensing capabilities utilizing resources originally reserved for communication -  has gained attention as a potential solution to better utilize the available spectrum. The proposed designs target architectures where sensing and communication are co-designed at physical and Medium Access Control (MAC) layer.
+								Supported by edge intelligence, this enables new possibilities for free-space (gesture) interaction, activity recognition or localization and tracking in IoT-augmented smart computing environments. The talk will summarize recent developments in RF-sensing and highlight challenges and opportunities for interaction in the context of HCI.
+								<br></br>
+								<b>Stephan Sigg</b> is an Associate Professor at Aalto University in the Department of Information and Communications Engineering. He heads the Ambient Intelligence research group. Prior to Aalto University, he has worked in Germany and in Japan. Professor Sigg’s research is focused on the design, analysis and optimisation of (randomized) algorithms in Mobile and Pervasive Computing domains, in particular focusing on (wireless) networking and security. In recent years has worked on problems related to usable security, device-free human sensing, pro-active context computing, distributed adaptive beamforming, communication and Sensing convergence, and physical layer function computation.
+								</p></li>
+								<li><p><b>"Advancements in Mobile Computer Vision: Supersight Application and Its Real-World Use Cases":</b> The Supersight mobile application presents a revolutionary approach to the utilization of computer vision technology. It offers a streamlined method to collect and analyze people flow data, traditionally an expensive and complex undertaking. This talk will delve into how we've simplified the process with an easy-to-use mobile application and immediate deployment model, making it accessible for varied projects and requirements. We will explore different real-world applications where Supersight has shown significant impact. This includes analytics for business premises, event management, cargo container inspections, and real-time aircraft maintenance analytics. The objective is to demonstrate how innovations in computer vision can have direct and practical implications for industries and how these advancements can be harnessed for further research and applications.
+								<br></br>
+								<b>Kimmo Pentikäinen</b> is a seasoned executive at Elisa Corporation, spearheading new business development and technology transformations. His current focus lies in the establishment of 5G business, with a diverse range of services such as 12K video, telepathology, and robotics. Kimmo has extensive experience in leveraging AI for internal processes, including mobile network operations and customer interactions. His previous leadership role in research saw him build a global network of over 1400 scientists.
+								</p></li>
+							</ul>
+						</div>
+				</div>
+			</div>
+		</div>
 		</div>
 	</section>
 
