--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 						<a class="page-scroll" href="#camera-ready"><b style='color:green;'>Camera Ready</b> </a>
 					</li> -->
 					<li>
+						<a class="page-scroll" href="#workshop-proceedings"><b style='color:green;'>Workshop Proceedings</b> </a>
+					</li>
+					<li>
 						<a class="page-scroll" href="#workshop-program"><b style='color:green;'>Workshop Program</b> </a>
 					</li>
 					<li>
@@ -134,6 +137,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[June 22th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys proceedings are online! Work in progress paper as well.</b>
+					</p>					
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 14th]</b> <b style='color:darkblue; font-size:16px;'>Keynote speakers announced!</b>
 					</p>
 					<p class="text-black text-left">
@@ -157,6 +163,23 @@
 		</div>
 		</div>
 		</div>
+
+
+	<section id="workshop-proceedings">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Workshop Proceedings</h2>
+						<div class="text-black text-left">
+							<ul>
+								<li><p><b>ACM proceedings:</b> NetAISys proceedings can be accessed <a href="https://dl.acm.org/doi/proceedings/10.1145/3597062" target="_blank" rel="noopener noreferrer">here</a>.</p></li>
+								<li><p><b>Work in Progress paper(s):</b> The paper "How Latency Differences between Workers Affect Parameter Server Training", Leonard Paeleke, Holger Karl (Hasso-Plattner-Institute) is available <a href="./wip_papers/netaisys23-final78.pdf" target="_blank" rel="noopener noreferrer">here</a>.</p></li>
+							</ul>
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section id="workshop-program">
 		<div class="container">
