proceedings online - minor fix

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[June 22th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys proceedings are online! Work in progress paper as well.</b>
+						<b style='color:darkblue; font-size:16px;'>[June 22th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys proceedings are online!</b>
 					</p>					
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 14th]</b> <b style='color:darkblue; font-size:16px;'>Keynote speakers announced!</b>
