news section reduced

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 22th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys proceedings are online!</b>
 					</p>					
-					<p class="text-black text-left">
+					<!-- <p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 14th]</b> <b style='color:darkblue; font-size:16px;'>Keynote speakers announced!</b>
 					</p>
 					<p class="text-black text-left">
@@ -147,7 +147,7 @@
 					</p>
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 5th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions to be announced by June 8th. Stay tuned!</b>
-					</p>					
+					</p> -->					
 					<!-- <p class="text-black text-left">
 						<b style='color:darkblue; font-size:9px;'>[May 12th]</b> <b style='color:darkblue; font-size:9px;'> The e-Rights form has been generated. Authors should have received an email from rightsreview@acm.org by now.</b>
 					</p>
