home page updated bis

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="twitter:card" content="summary">
-	<meta property="og:title" content="NetAISys 2023 – 1st International Workshop on Networked AI Systems">
-	<meta property="twitter:title" content="NetAI Sys 2023 – 1st International Workshop on Networked AI Systems">
-	<meta property="og:description" content="In this MobiSys 2023 workshop, we are hoping to bring researchers together to discuss opportunities, challenges, solutions, and next steps in the context of Networked AI Systems.">
+	<meta property="og:title" content="NetAISys 2024 – 2nd International Workshop on Networked AI Systems">
+	<meta property="twitter:title" content="NetAI Sys 2024 – 1st International Workshop on Networked AI Systems">
+	<meta property="og:description" content="In this MobiSys 2024 workshop, we are hoping to bring researchers together to discuss opportunities, challenges, solutions, and next steps in the context of Networked AI Systems.">
 	<meta property="og:url" content="https://netaisys.github.io/">
 	<meta property="og:image" content="img/" />
 	<meta property="twitter:image" content="img/" />
 
-	<title>NetAISys 2023: International Workshop on Networked AI Systems</title>
+	<title>NetAISys 2024: International Workshop on Networked AI Systems</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -53,7 +53,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">NetAISys 2023</a>
+				<a class="navbar-brand page-scroll" href="#page-top">NetAISys 2024</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -137,7 +137,7 @@
 			<div class="header-content-inner">
 				<h1  >International Workshop on Networked AI Systems</h1>
 				<hr>
-				<p style="color:white;"> Co-located with ACM MobiSys 2023<br>June 18, 2023. Helsinki, Finland</p>
+				<p style="color:white;"> Co-located with ACM MobiSys 2024<br>June 18, 2024. Helsinki, Finland</p>
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
 			</div>
 		</div>
@@ -201,7 +201,7 @@
 					<h2 class="section-heading">Networked AI Systems Workshop Program</h2>
 					<div class="col-lg-12 text-center">
 						<p class="text-black text-left">
-						NetAISys and <a href="https://blogs.helsinki.fi/envsys-2023/" target="_blank" rel="noopener noreferrer">EnvSys</a> Workshops are merging for ACM MobiSys 2023 on June 18, creating a comprehensive one-day event.
+						NetAISys and <a href="https://blogs.helsinki.fi/envsys-2024/" target="_blank" rel="noopener noreferrer">EnvSys</a> Workshops are merging for ACM MobiSys 2024 on June 18, creating a comprehensive one-day event.
 						</p>	
 						<p class="text-black text-left">
 						Both workshops revolve around the pivotal roles of artificial intelligence, focusing on different but complementary aspects. NetAISys explores the integration of AI with networking systems, investigating the challenges and opportunities it brings. EnvSys, on the other hand, emphasizes the application of these technologies to environmental sensing, tackling crucial environmental issues using tech solutions.
@@ -327,7 +327,7 @@
 						<li><p>After completing the rights management form, you will be emailed the correct rights management text and bibliographic strip to place within your paper. It is essential that you add the text into your paper.</p></li>
 						<li><p>Avoid using any special characters or non-standard fonts. We must be able to display and print your submission exactly as we receive it using only standard tools and printers, so we strongly suggest that you use only standard fonts embedded in the PDF file.</p></li>
 						<p><b style='color:black; font-size:20px;'>Submit camera-ready version</b></p>
-						<li><p>Go to the NetAISys 2023 submission page and edit your paper: <a href="https://netaisys23.hotcrp.com" target="_blank" rel="noopener noreferrer">https://netaisys23.hotcrp.com</a></p></li>
+						<li><p>Go to the NetAISys 2024 submission page and edit your paper: <a href="https://netaisys23.hotcrp.com" target="_blank" rel="noopener noreferrer">https://netaisys23.hotcrp.com</a></p></li>
 						<li><p>Submit the PDF of your camera-ready paper.</p></li>
 						<p>The PDFs must satisfy the following requirements:</p>
 						<li><p>They have the complete rights text (bibliographic strip, ISBN, DOI, etc.). This information is emailed to authors after they complete their e-Rights forms and must be added add to the paper.</p></li>
@@ -346,11 +346,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">MobiSys 2023 Workshop on Networked AI Systems</h2>
+					<h2 class="section-heading">MobiSys 2024 Workshop on Networked AI Systems</h2>
 					<hr class="light">
 
 					<p class="text-black text-left">
-						The 1st International Workshop on Networked AI Systems (NetAISys), colocated with MobiSys 2023, aims to bring together leading experts in the field to explore the latest advancements and challenges in the integration of AI and networking technologies. Such integration is driving the development of intelligent and autonomous systems that are capable of making decisions and performing tasks in real-time. The workshop will provide a platform for the presentation and discussion of cutting-edge research, the demonstration of innovative networked AI systems and applications, and the exchange of ideas, experiences, and case studies. The significance of this workshop to the ACM MobiSys community lies in the growing reliance on AI systems that are connected to and operate within wireless networks. With AI/ML migrating to the network edge, there is an increasing demand for efficient and effective AI systems that play a crucial role in powering various intelligent and autonomous systems in dynamic network environments with varying network conditions. By bringing together researchers, practitioners, and industry professionals, we hope to create a collaborative environment and a one-of-kind and valuable opportunity to delve into the challenges and latest advancements presented by networked AI systems and applications. We look forward to sharing our experience and insights with the ACM MobiSys community.
+						The 1st International Workshop on Networked AI Systems (NetAISys), colocated with MobiSys 2024, aims to bring together leading experts in the field to explore the latest advancements and challenges in the integration of AI and networking technologies. Such integration is driving the development of intelligent and autonomous systems that are capable of making decisions and performing tasks in real-time. The workshop will provide a platform for the presentation and discussion of cutting-edge research, the demonstration of innovative networked AI systems and applications, and the exchange of ideas, experiences, and case studies. The significance of this workshop to the ACM MobiSys community lies in the growing reliance on AI systems that are connected to and operate within wireless networks. With AI/ML migrating to the network edge, there is an increasing demand for efficient and effective AI systems that play a crucial role in powering various intelligent and autonomous systems in dynamic network environments with varying network conditions. By bringing together researchers, practitioners, and industry professionals, we hope to create a collaborative environment and a one-of-kind and valuable opportunity to delve into the challenges and latest advancements presented by networked AI systems and applications. We look forward to sharing our experience and insights with the ACM MobiSys community.
 					</p>
 		</div>
 		</div>
@@ -374,11 +374,11 @@
 					</p>
 
 					<p class="text-black text-left">
-						The goal of this workshop is to bring together researchers and practitioners working on the design, implementation, and deployment of AI systems in networked environments. The workshop aims to provide a forum for discussing the latest research and development in this field, as well as for sharing practical experiences and case studies.
+						The goal of this workshop is to bring together researchers and practitioners working on the design, implementation, and deployment of AI systems in networked environments. The workshop aims to provide a forum for discussing the latest research and development in this field, as well as for sharing practical experiences and case studies. 
 					</p>
 
 					<p class="text-black text-left">
-						By bringing together experts from academia and industry, the workshop aims to foster collaboration and to promote the development of new ideas and research directions in this field. The workshop is co-located with ACM MobiSys 2023 and will be held as an in-person event in Helsinki (Finland). We invite submissions of original research papers, as well as papers describing practical experiences, case studies, and tutorials.
+						By bringing together experts from academia and industry, the workshop aims to foster collaboration and to promote the development of new ideas and research directions in this field. The workshop is co-located with ACM MobiSys 2024 and will be held as an in-person event in Tokyo (Japan). We invite submissions of original research papers, as well as papers describing practical experiences, case studies, and tutorials.
 					</p>
 			<h3>Topics of interest include, but are not limited to:</h3>
 			<div class="text-black text-left">
@@ -413,10 +413,10 @@
 						<div class="text-black text-left">
 							<ul>
 								<li><p><b>Full paper submission.</b> Solicited submissions include both full technical workshop papers and white position papers. Maximum length of such submissions is 6 pages (<u>including references</u>), and if accepted they will be published by ACM and appear in the ACM Digital Library.</p></li>
-								<li><p><b>Work-in-progress and demo submissions.</b> Abstracts describing work-in-progress and demonstrations are also welcome and warmly encouraged. Submissions are limited to 2 pages (<u>excluding references</u>), and if accepted included in the program as a short oral presentation – but will only be published on the workshop website (not the ACM Digital Library). Deadlines for this informal track remain open even past the early registration deadline of MobiSys 2023; author notifications will be rolling (i.e. max of 4 days after submission) to enable early authors to take advantage of available discounts.</p></li>
+								<li><p><b>Work-in-progress and demo submissions.</b> Abstracts describing work-in-progress and demonstrations are also welcome and warmly encouraged. Submissions are limited to 2 pages (<u>excluding references</u>), and if accepted included in the program as a short oral presentation – but will only be published on the workshop website (not the ACM Digital Library). Deadlines for this informal track remain open even past the early registration deadline of MobiSys 2024; author notifications will be rolling (i.e. max of 4 days after submission) to enable early authors to take advantage of available discounts.</p></li>
 							</ul>
 						</div>
-						<p class="text-left">NetAISys follows a <u>single-blind review process</u>, but all submissions must be original work not under review at any other workshop, conference, or journal. Submissions must be submitted as a PDF in the double-column <a href="https://www.sigmobile.org/mobisys/2023/sub.html" target="_blank" rel="noopener noreferrer">MobiSys format</a>. Submissions can use this <a href="https://conferences.sigcomm.org/sigcomm/2013/misc/sig-alternate-10pt.cls/" target="_blank" rel="noopener noreferrer">LaTex template</a> that is known to comply with the formatting requirements. Authors remain responsible for checking that their resulting PDF meets our formatting and anonymity specifications.<br><br><b style='color:red;'>[IMPORTANT!]</b> A selection of workshop best papers will be invited to submit extended versions for tentative publication in a special issue of <a href="https://www.sciencedirect.com/journal/computer-networks">Elsevier Computer Networks</a>.</p>
+						<p class="text-left">NetAISys follows a <u>single-blind review process</u>, but all submissions must be original work not under review at any other workshop, conference, or journal. Submissions must be submitted as a PDF in the double-column <a href="https://www.sigmobile.org/mobisys/2024/sub.html" target="_blank" rel="noopener noreferrer">MobiSys format</a>. Submissions can use this <a href="https://conferences.sigcomm.org/sigcomm/2013/misc/sig-alternate-10pt.cls/" target="_blank" rel="noopener noreferrer">LaTex template</a> that is known to comply with the formatting requirements. Authors remain responsible for checking that their resulting PDF meets our formatting and anonymity specifications.<br><br><b style='color:red;'>[IMPORTANT!]</b> A selection of workshop best papers will be invited to submit extended versions for tentative publication in a special issue of <a href="https://www.sciencedirect.com/journal/computer-networks">Elsevier Computer Networks</a>.</p>
 				</div>
 			</div>
 			<div class="row text-black">
@@ -425,10 +425,10 @@
 						<h3>Submission Important Dates</h3>
 						<div class="text-black text-left">
 						  <ul>
-							<li><p>Submission Deadline: <b>Monday April 24th, 2023, AoE [FIRM]</b></p></li>
-							<li><p>Notification of Acceptenace: <b>Monday May 10th, 2023, AoE</b></p></li>
-							<li><p>Camera-ready Papers Due: <b>Monday May 15th, 2023, AoE [FIRM]</b></p></li>
-							<li><p>Workshop Date: <b style='color:red;'>Sunday June 18, 2023</b></p></li>
+							<li><p>Submission Deadline: <b>Monday April 24th, 2024, AoE [FIRM]</b></p></li>
+							<li><p>Notification of Acceptenace: <b>Monday May 10th, 2024, AoE</b></p></li>
+							<li><p>Camera-ready Papers Due: <b>Monday May 15th, 2024, AoE [FIRM]</b></p></li>
+							<li><p>Workshop Date: <b style='color:red;'>Sunday June 18, 2024</b></p></li>
 						  </ul>         
 						</div>   
 				</div>
@@ -449,12 +449,12 @@
 					<div class="col-lg-offset-2 text-center">
 						<i class="fa fa-4x fa-user-plus wow bounceIn text-primary" data-wow-delay=".1s"></i>
 						<h3>Registration</h3>
-						<p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2023</a>. Important dates:</p>
+						<p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2024/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2024</a>. Important dates:</p>
 						<div class="text-black text-left">
 							<ul>
-							  <li><p>Early Registration 1: <b>Before May 15, 2023, 23:59 GMT+3</b></p></li>
-							  <li><p>Early Registration 2: <b>Before June 17, 2023, 23:59 GMT+3</b></p></li>
-							  <li><p>Default Registration: <b>After June 18, 2023, 00:00 GMT+3</b></p></li>
+							  <li><p>Early Registration 1: <b>Before May 15, 2024, 23:59 GMT+3</b></p></li>
+							  <li><p>Early Registration 2: <b>Before June 17, 2024, 23:59 GMT+3</b></p></li>
+							  <li><p>Default Registration: <b>After June 18, 2024, 00:00 GMT+3</b></p></li>
 							</ul>         
 						</div>
 						<p class="text-left">Each accepted paper must be covered by a "Full Pass" or "Workshops ONLY" registration from at least one of the authors.</p>
