--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">NetAISys 2024</a>
+				<a class="navbar-brand page-scroll" href="#page-top">NetAISys 2024 – ACM MobiSys 2024 Workshop</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -115,7 +115,7 @@
 			<div class="header-content-inner">
 				<h1 style="color:red;">International Workshop on Networked AI Systems</h1>
 				<hr>
-				<p style="color:red;"> Co-located with ACM MobiSys 2024<br>June 7, 2024. Tokyo, Japan</p>
+				<p style="color:red; font-size: 45px;">Co-Located with ACM MobiSys 2024<br>June 7, 2024. TOKYO, JAPAN</p>
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
 			</div>
 		</div>
