--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 			</div>
 			<div class="row text-black">
 				<div class="col-lg-12 text-center">
-					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></i>.<!--<br>Homepage picture is provided by Janne Hirvonen / Helsinki Partners. Full picture available <a href="https://materialbank.myhelsinki.fi/images?query=tower&sort=relevance&openMediaId=5487" target="_blank" rel="noopener noreferrer">here.</a></i>-->
+					If you have any questions, please contact <i><a href="mailto:roberto.morabito@eurecom.fr" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></i>.<br>Homepage picture is an artwork created using OpenAI's DALLE-2.</br>
 				</div>
 		</div>
 	</section>
