--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a class="page-scroll" href="#news"><b style='color:red;'>News</b> </a>
+						<a class="page-scroll" href="#news"><b style='color:#FF00FF;'>News</b> </a>
 					</li>
 
 					<li>
