--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">MobiSys 2024 Workshop on Networked AI Systems</h2>
+					<h2 class="section-heading">ACM MobiSys 2024 Workshop on Networked AI Systems</h2>
 					<hr class="light">
 
 					<p class="text-black text-left">
