--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a class="page-scroll" href="#news"><b style='color:#FF00FF;'>News</b> </a>
+						<a class="page-scroll" href="#news"><b style='color:red;'>News</b> </a>
 					</li>
 
 					<li>
@@ -115,7 +115,7 @@
 			<div class="header-content-inner">
 				<h1 style="color:red;">International Workshop on Networked AI Systems</h1>
 				<hr>
-				<p style="color:red; font-size: 45px;">Co-Located with ACM MobiSys 2024<br>June 7, 2024. TOKYO, JAPAN</p>
+				<p style="color:black; font-size: 45px;">Co-Located with ACM MobiSys 2024<br>June 7, 2024. TOKYO, JAPAN</p>
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
 			</div>
 		</div>
