--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			<div class="header-content-inner">
 				<h1 style="color:red;">International Workshop on Networked AI Systems</h1>
 				<hr>
-				<p style="color:black; font-size: 45px;">Co-Located with ACM MobiSys 2024<br>June 7, 2024. TOKYO, JAPAN</p>
+				<p style="color:black; font-size: 45px;">Co-Located with ACM MobiSys 2024<br>June 7, 2024. Tokyo, Japan</p>
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
 			</div>
 		</div>
