--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 					<li class="nav-item dropdown">
 			              <a class="nav-link dropdown-toggle" href="#" id="navbar-dropdown6" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			                Archive
+			                Previous Editions
 			              </a>
 			             <div class="dropdown-menu" aria-labelledby="navbar-dropdown6">
 			                
