--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">NetAISys 2024 – ACM MobiSys 2024 Workshop</a>
+				<a class="navbar-brand page-scroll" href="#page-top">NetAISys '24 – ACM MobiSys Workshop</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
