--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 				<div class="col-lg-4 text-center">
 						<i class="fa fa-4x fa-cloud-upload wow bounceIn text-primary" data-wow-delay=".2s"></i>
 						<h3>Submission System</h3>
-						<p class="text-left">Submit your work via HotCRP [SUBMISSION PORTAL TO BE OPEN SOON]</a>.</p>
+						<p class="text-left">Submit your work via <a href="https://netaisys24.hotcrp.com/" target="_blank" rel="noopener noreferrer">HotCRP</a>.</p>
 				</div>
 			</div>
 			
