--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
 
 				<div class="col-lg-12 col-lg-offset-1 text-left">
 					<ul>
-						<!--<li><p><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito, EURECOM</a></p></li>-->
-						<!--<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>-->
-						<!--<<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas" target="_blank" rel="noopener noreferrer">Susanna Pirttikangas, University of Oulu</a></p></li>-->
+						<li><p><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito, EURECOM (FR)</a></p></li>
+						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">SiYoung Jang, Nokia Bell Labs Cambridge (UK)</a></p></li>
+						<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas" target="_blank" rel="noopener noreferrer">Ahmed M. A. Sayed, Queen Mary University of London (UK)</a></p></li>
 					</ul>
 
 				</div>
