--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 				<div class="col-lg-12 col-lg-offset-1 text-left">
 					<ul>
 						<li><p><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito, EURECOM (FR)</a></p></li>
-						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">SiYoung Jang, Nokia Bell Labs Cambridge (UK)</a></p></li>
-						<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas" target="_blank" rel="noopener noreferrer">Ahmed M. A. Sayed, Queen Mary University of London (UK)</a></p></li>
+						<li><p><a href="https://siyoungjang.github.io/" target="_blank" rel="noopener noreferrer">SiYoung Jang, Nokia Bell Labs Cambridge (UK)</a></p></li>
+						<li><p><a href="https://eecs.qmul.ac.uk/~ahmed/" target="_blank" rel="noopener noreferrer">Ahmed M. A. Sayed, Queen Mary University of London (UK)</a></p></li>
 					</ul>
 
 				</div>
