--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 						<a class="page-scroll" href="#registration">Registration</a>
 					</li> -->
 
-					<li>
+					<!--<li>
 						<a class="page-scroll" href="#organizers">Organizers</a>
-					</li>
+					</li> -->
 
 					<li>
 						<a class="page-scroll" href="#program-committee">TPC</a>
@@ -275,13 +275,13 @@
 	</section> -->
 
 
-	<section id="organizers">
+	<!--<section id="organizers">
 		<div class="container">
 			 <div class="col-lg-12 text-center">
 						<h2 class="section-heading">Organizers</h2>
 						<hr class="primary">
 			 </div>
-		</div>   
+		</div>-->   
 		<!--<div class="row text-black">
 				<div class="col-lg-offset-2 col-lg-4 text-center">
 					<div class="service-box">
@@ -312,9 +312,9 @@
 				</div>--> 
 
 				
-		</div>
+		<!--</div>
 	
-	</section>
+	</section>-->
 
 
 	<section id="program-committee">
