--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					</li> -->
 
 					<li>
-						<a class="page-scroll" href="#program-committee">TPC</a>
+						<a class="page-scroll" href="#program-committee">Committee</a>
 					</li>
 
 				  	<li>
