--- a/index.html
+++ b/index.html
@@ -344,8 +344,12 @@
 			 <div class="row text-black text-center">
 
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
-					<!--<ul>
-						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html" target="_blank" rel="noopener noreferrer">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
+					<ul>
+						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
+						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
+
+					</ul>	
+						<!-- <li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html" target="_blank" rel="noopener noreferrer">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
 						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
 						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, University of Helsinki</a></p></li>
@@ -360,8 +364,7 @@
 						<li><p><a href="https://kr.linkedin.com/in/si-young-jang-bb336457" target="_blank" rel="noopener noreferrer">Si-Young Jang, Nokia Bell Labs</a></p></li>
 						<li><p><a href="https://sites.google.com/view/professorflaviadelicato/home" target="_blank" rel="noopener noreferrer">Flavia Delicato, Fluminense Federal University</a></p></li>
 						<li><p><a href="https://jspencer.org/" target="_blank" rel="noopener noreferrer">Jonathan Spencer, Waymo</a></p></li>
-						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li>
-					</ul>-->
+						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li> -->
 					<p><i><b>TPC memembers to be announced soon.</b> Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
 
 				</div>
