TPC member added

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
 					<ul>
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<li><p><a href="https://ali-maatouk.github.io/" target="_blank" rel="noopener noreferrer">Ali Maatouk, Yale University</a></p></li>
+						<li><p><a href="https://e6.ijs.si/people/blaz-bertalanic" target="_blank" rel="noopener noreferrer">Blaž Bertalanič, Jožef Stefan Institute</a></p></li>
 
 					</ul>	
 						<!-- <li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html" target="_blank" rel="noopener noreferrer">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
